--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,19 @@
     {
       "type": "composer",
       "url": "https://satis.middag.com.br"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/michaelmeneses/moodle-local_costcenter.git"
     }
   ],
   "require": {
     "composer/installers": "~1.0",
     "vlucas/phpdotenv": "^5.6",
-    "moodle/moodle": "4.4.*"
+    "moodle/moodle": "4.4.*",
+    "poetos/moodle-mod_questionnaire": "2022121601",
+    "michaelmeneses/moodle-local_costcenter": "dev-main",
+    "catalyst/moodle-report_coursesize": "*"
   },
   "autoload": {
     "psr-4": {
